[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Player/StrongPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ChangeScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://CamSwitch.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Objects/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player/TechPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Player/QuickPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Player/Players.gd" type="Script" id=7]
[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Objects/Spikes.tscn" type="PackedScene" id=9]

[node name="World1" type="Node"]

[node name="ParallaxBackground" parent="." instance=ExtResource( 8 )]

[node name="TileMap" parent="." instance=ExtResource( 4 )]
collision_mask = 7
tile_data = PoolIntArray( 983073, 0, 0, 1114112, 0, 65537, 1114113, 0, 65538, 1114114, 0, 65538, 1114115, 0, 65538, 1114116, 0, 65538, 1114117, 0, 65538, 1114118, 0, 65538, 1114119, 0, 65538, 1114120, 0, 65538, 1114121, 0, 65538, 1114122, 0, 65538, 1114123, 0, 65538, 1114124, 0, 65538, 1114125, 0, 65538, 1114126, 0, 65538, 1114127, 0, 65538, 1114128, 0, 65538, 1114129, 0, 65538, 1114130, 0, 65538, 1114131, 0, 65538, 1114132, 0, 65538, 1114133, 0, 65538, 1114134, 0, 65538, 1114135, 0, 65538, 1114136, 0, 65538, 1114137, 0, 65538, 1114138, 0, 65538, 1114139, 0, 65538, 1114140, 0, 65538, 1114141, 0, 65538, 1114142, 0, 65538, 1114143, 0, 65538, 1114144, 0, 65538, 1114145, 0, 65538, 1114146, 0, 65538, 1114147, 0, 65538, 1114148, 0, 65538, 1114149, 0, 65538, 1114150, 0, 65538, 1114151, 0, 65538, 1114152, 0, 65538, 1114153, 0, 65538, 1114154, 0, 65538, 1114155, 0, 65538, 1114156, 0, 65538, 1114157, 0, 65538, 1114158, 0, 65538, 1114159, 0, 65538, 1114160, 0, 65538, 1114161, 0, 65538, 1114162, 0, 65538, 1114163, 0, 65538, 1114164, 0, 65538, 1114165, 0, 65538, 1114166, 0, 65538, 1114167, 0, 65538, 1114168, 0, 65538, 1114169, 0, 65538, 1114170, 0, 65538, 1114171, 0, 65538, 1114172, 0, 65538, 1114173, 0, 65538, 1114174, 0, 65538, 1114175, 0, 65538, 1114176, 0, 65538, 1114177, 0, 65538, 1114178, 0, 65538, 1114179, 0, 65538, 1114180, 0, 65538, 1114181, 0, 65538, 1114182, 0, 65538, 1114183, 0, 65538, 1114184, 0, 65539, 1179648, 0, 131073, 1179649, 0, 131074, 1179650, 0, 131074, 1179651, 0, 131074, 1179652, 0, 131074, 1179653, 0, 131074, 1179654, 0, 131074, 1179655, 0, 131074, 1179656, 0, 131074, 1179657, 0, 131074, 1179658, 0, 131074, 1179659, 0, 131074, 1179660, 0, 131074, 1179661, 0, 131074, 1179662, 0, 131074, 1179663, 0, 131074, 1179664, 0, 131074, 1179665, 0, 131074, 1179666, 0, 131074, 1179667, 0, 131074, 1179668, 0, 131074, 1179669, 0, 131074, 1179670, 0, 131074, 1179671, 0, 131074, 1179672, 0, 131074, 1179673, 0, 131074, 1179674, 0, 131074, 1179675, 0, 131074, 1179676, 0, 131074, 1179677, 0, 131074, 1179678, 0, 131074, 1179679, 0, 131074, 1179680, 0, 131074, 1179681, 0, 131074, 1179682, 0, 131074, 1179683, 0, 131074, 1179684, 0, 131074, 1179685, 0, 131074, 1179686, 0, 131074, 1179687, 0, 131074, 1179688, 0, 131074, 1179689, 0, 131074, 1179690, 0, 131074, 1179691, 0, 131074, 1179692, 0, 131074, 1179693, 0, 131074, 1179694, 0, 131074, 1179695, 0, 131074, 1179696, 0, 131074, 1179697, 0, 131074, 1179698, 0, 131074, 1179699, 0, 131074, 1179700, 0, 131074, 1179701, 0, 131074, 1179702, 0, 131074, 1179703, 0, 131074, 1179704, 0, 131074, 1179705, 0, 131074, 1179706, 0, 131074, 1179707, 0, 131074, 1179708, 0, 131074, 1179709, 0, 131074, 1179710, 0, 131074, 1179711, 0, 131074, 1179712, 0, 131074, 1179713, 0, 131074, 1179714, 0, 131074, 1179715, 0, 131074, 1179716, 0, 131074, 1179717, 0, 131074, 1179718, 0, 131074, 1179719, 0, 131074, 1179720, 0, 131075, 1245184, 0, 131073, 1245185, 0, 131074, 1245186, 0, 131074, 1245187, 0, 131074, 1245188, 0, 131074, 1245189, 0, 131074, 1245190, 0, 131074, 1245191, 0, 131074, 1245192, 0, 131074, 1245193, 0, 131074, 1245194, 0, 131074, 1245195, 0, 131074, 1245196, 0, 131074, 1245197, 0, 131074, 1245198, 0, 131074, 1245199, 0, 131074, 1245200, 0, 131074, 1245201, 0, 131074, 1245202, 0, 131074, 1245203, 0, 131074, 1245204, 0, 131074, 1245205, 0, 131074, 1245206, 0, 131074, 1245207, 0, 131074, 1245208, 0, 131074, 1245209, 0, 131074, 1245210, 0, 131074, 1245211, 0, 131074, 1245212, 0, 131074, 1245213, 0, 131074, 1245214, 0, 131074, 1245215, 0, 131074, 1245216, 0, 131074, 1245217, 0, 131074, 1245218, 0, 131074, 1245219, 0, 131074, 1245220, 0, 131074, 1245221, 0, 131074, 1245222, 0, 131074, 1245223, 0, 131074, 1245224, 0, 131074, 1245225, 0, 131074, 1245226, 0, 131074, 1245227, 0, 131074, 1245228, 0, 131074, 1245229, 0, 131074, 1245230, 0, 131074, 1245231, 0, 131074, 1245232, 0, 131074, 1245233, 0, 131074, 1245234, 0, 131074, 1245235, 0, 131074, 1245236, 0, 131074, 1245237, 0, 131074, 1245238, 0, 131074, 1245239, 0, 131074, 1245240, 0, 131074, 1245241, 0, 131074, 1245242, 0, 131074, 1245243, 0, 131074, 1245244, 0, 131074, 1245245, 0, 131074, 1245246, 0, 131074, 1245247, 0, 131074, 1245248, 0, 131074, 1245249, 0, 131074, 1245250, 0, 131074, 1245251, 0, 131074, 1245252, 0, 131074, 1245253, 0, 131074, 1245254, 0, 131074, 1245255, 0, 131074, 1245256, 0, 131075, 1310720, 0, 131073, 1310721, 0, 131074, 1310722, 0, 131074, 1310723, 0, 131074, 1310724, 0, 131074, 1310725, 0, 131074, 1310726, 0, 131074, 1310727, 0, 131074, 1310728, 0, 131074, 1310729, 0, 131074, 1310730, 0, 131074, 1310731, 0, 131074, 1310732, 0, 131074, 1310733, 0, 131074, 1310734, 0, 131074, 1310735, 0, 131074, 1310736, 0, 131074, 1310737, 0, 131074, 1310738, 0, 131074, 1310739, 0, 131074, 1310740, 0, 131074, 1310741, 0, 131074, 1310742, 0, 131074, 1310743, 0, 131074, 1310744, 0, 131074, 1310745, 0, 131074, 1310746, 0, 131074, 1310747, 0, 131074, 1310748, 0, 131074, 1310749, 0, 131074, 1310750, 0, 131074, 1310751, 0, 131074, 1310752, 0, 131074, 1310753, 0, 131074, 1310754, 0, 131074, 1310755, 0, 131074, 1310756, 0, 131074, 1310757, 0, 131074, 1310758, 0, 131074, 1310759, 0, 131074, 1310760, 0, 131074, 1310761, 0, 131074, 1310762, 0, 131074, 1310763, 0, 131074, 1310764, 0, 131074, 1310765, 0, 131074, 1310766, 0, 131074, 1310767, 0, 131074, 1310768, 0, 131074, 1310769, 0, 131074, 1310770, 0, 131074, 1310771, 0, 131074, 1310772, 0, 131074, 1310773, 0, 131074, 1310774, 0, 131074, 1310775, 0, 131074, 1310776, 0, 131074, 1310777, 0, 131074, 1310778, 0, 131074, 1310779, 0, 131074, 1310780, 0, 131074, 1310781, 0, 131074, 1310782, 0, 131074, 1310783, 0, 131074, 1310784, 0, 131074, 1310785, 0, 131074, 1310786, 0, 131074, 1310787, 0, 131074, 1310788, 0, 131074, 1310789, 0, 131074, 1310790, 0, 131074, 1310791, 0, 131074, 1310792, 0, 131075, 1376256, 0, 131073, 1376257, 0, 131074, 1376258, 0, 131074, 1376259, 0, 131074, 1376260, 0, 131074, 1376261, 0, 131074, 1376262, 0, 131074, 1376263, 0, 131074, 1376264, 0, 131074, 1376265, 0, 131074, 1376266, 0, 131074, 1376267, 0, 131074, 1376268, 0, 131074, 1376269, 0, 131074, 1376270, 0, 131074, 1376271, 0, 131074, 1376272, 0, 131074, 1376273, 0, 131074, 1376274, 0, 131074, 1376275, 0, 131074, 1376276, 0, 131074, 1376277, 0, 131074, 1376278, 0, 131074, 1376279, 0, 131074, 1376280, 0, 131074, 1376281, 0, 131074, 1376282, 0, 131074, 1376283, 0, 131074, 1376284, 0, 131074, 1376285, 0, 131074, 1376286, 0, 131074, 1376287, 0, 131074, 1376288, 0, 131074, 1376289, 0, 131074, 1376290, 0, 131074, 1376291, 0, 131074, 1376292, 0, 131074, 1376293, 0, 131074, 1376294, 0, 131074, 1376295, 0, 131074, 1376296, 0, 131074, 1376297, 0, 131074, 1376298, 0, 131074, 1376299, 0, 131074, 1376300, 0, 131074, 1376301, 0, 131074, 1376302, 0, 131074, 1376303, 0, 131074, 1376304, 0, 131074, 1376305, 0, 131074, 1376306, 0, 131074, 1376307, 0, 131074, 1376308, 0, 131074, 1376309, 0, 131074, 1376310, 0, 131074, 1376311, 0, 131074, 1376312, 0, 131074, 1376313, 0, 131074, 1376314, 0, 131074, 1376315, 0, 131074, 1376316, 0, 131074, 1376317, 0, 131074, 1376318, 0, 131074, 1376319, 0, 131074, 1376320, 0, 131074, 1376321, 0, 131074, 1376322, 0, 131074, 1376323, 0, 131074, 1376324, 0, 131074, 1376325, 0, 131074, 1376326, 0, 131074, 1376327, 0, 131074, 1376328, 0, 131075, 1441792, 0, 131073, 1441793, 0, 131074, 1441794, 0, 131074, 1441795, 0, 131074, 1441796, 0, 131074, 1441797, 0, 131074, 1441798, 0, 131074, 1441799, 0, 131074, 1441800, 0, 131074, 1441801, 0, 131074, 1441802, 0, 131074, 1441803, 0, 131074, 1441804, 0, 131074, 1441805, 0, 131074, 1441806, 0, 131074, 1441807, 0, 131074, 1441808, 0, 131074, 1441809, 0, 131074, 1441810, 0, 131074, 1441811, 0, 131074, 1441812, 0, 131074, 1441813, 0, 131074, 1441814, 0, 131074, 1441815, 0, 131074, 1441816, 0, 131074, 1441817, 0, 131074, 1441818, 0, 131074, 1441819, 0, 131074, 1441820, 0, 131074, 1441821, 0, 131074, 1441822, 0, 131074, 1441823, 0, 131074, 1441824, 0, 131074, 1441825, 0, 131074, 1441826, 0, 131074, 1441827, 0, 131074, 1441828, 0, 131074, 1441829, 0, 131074, 1441830, 0, 131074, 1441831, 0, 131074, 1441832, 0, 131074, 1441833, 0, 131074, 1441834, 0, 131074, 1441835, 0, 131074, 1441836, 0, 131074, 1441837, 0, 131074, 1441838, 0, 131074, 1441839, 0, 131074, 1441840, 0, 131074, 1441841, 0, 131074, 1441842, 0, 131074, 1441843, 0, 131074, 1441844, 0, 131074, 1441845, 0, 131074, 1441846, 0, 131074, 1441847, 0, 131074, 1441848, 0, 131074, 1441849, 0, 131074, 1441850, 0, 131074, 1441851, 0, 131074, 1441852, 0, 131074, 1441853, 0, 131074, 1441854, 0, 131074, 1441855, 0, 131074, 1441856, 0, 131074, 1441857, 0, 131074, 1441858, 0, 131074, 1441859, 0, 131074, 1441860, 0, 131074, 1441861, 0, 131074, 1441862, 0, 131074, 1441863, 0, 131074, 1441864, 0, 131075, 1507328, 0, 131073, 1507329, 0, 131074, 1507330, 0, 131074, 1507331, 0, 131074, 1507332, 0, 131074, 1507333, 0, 131074, 1507334, 0, 131074, 1507335, 0, 131074, 1507336, 0, 131074, 1507337, 0, 131074, 1507338, 0, 131074, 1507339, 0, 131074, 1507340, 0, 131074, 1507341, 0, 131074, 1507342, 0, 131074, 1507343, 0, 131074, 1507344, 0, 131074, 1507345, 0, 131074, 1507346, 0, 131074, 1507347, 0, 131074, 1507348, 0, 131074, 1507349, 0, 131074, 1507350, 0, 131074, 1507351, 0, 131074, 1507352, 0, 131074, 1507353, 0, 131074, 1507354, 0, 131074, 1507355, 0, 131074, 1507356, 0, 131074, 1507357, 0, 131074, 1507358, 0, 131074, 1507359, 0, 131074, 1507360, 0, 131074, 1507361, 0, 131074, 1507362, 0, 131074, 1507363, 0, 131074, 1507364, 0, 131074, 1507365, 0, 131074, 1507366, 0, 131074, 1507367, 0, 131074, 1507368, 0, 131074, 1507369, 0, 131074, 1507370, 0, 131074, 1507371, 0, 131074, 1507372, 0, 131074, 1507373, 0, 131074, 1507374, 0, 131074, 1507375, 0, 131074, 1507376, 0, 131074, 1507377, 0, 131074, 1507378, 0, 131074, 1507379, 0, 131074, 1507380, 0, 131074, 1507381, 0, 131074, 1507382, 0, 131074, 1507383, 0, 131074, 1507384, 0, 131074, 1507385, 0, 131074, 1507386, 0, 131074, 1507387, 0, 131074, 1507388, 0, 131074, 1507389, 0, 131074, 1507390, 0, 131074, 1507391, 0, 131074, 1507392, 0, 131074, 1507393, 0, 131074, 1507394, 0, 131074, 1507395, 0, 131074, 1507396, 0, 131074, 1507397, 0, 131074, 1507398, 0, 131074, 1507399, 0, 131074, 1507400, 0, 131079, 1507401, 0, 3, 1572864, 0, 196609, 1572865, 0, 196610, 1572866, 0, 196610, 1572867, 0, 196610, 1572868, 0, 196610, 1572869, 0, 196610, 1572870, 0, 196610, 1572871, 0, 196610, 1572872, 0, 196610, 1572873, 0, 196610, 1572874, 0, 196610, 1572875, 0, 196610, 1572876, 0, 196610, 1572877, 0, 196610, 1572878, 0, 196610, 1572879, 0, 196610, 1572880, 0, 196610, 1572881, 0, 196610, 1572882, 0, 196610, 1572883, 0, 196610, 1572884, 0, 196610, 1572885, 0, 196610, 1572886, 0, 196610, 1572887, 0, 196610, 1572888, 0, 196610, 1572889, 0, 196610, 1572890, 0, 196610, 1572891, 0, 196610, 1572892, 0, 196610, 1572893, 0, 196610, 1572894, 0, 196610, 1572895, 0, 196610, 1572896, 0, 196610, 1572897, 0, 196610, 1572898, 0, 196610, 1572899, 0, 196610, 1572900, 0, 196610, 1572901, 0, 196610, 1572902, 0, 196610, 1572903, 0, 196610, 1572904, 0, 196610, 1572905, 0, 196610, 1572906, 0, 196610, 1572907, 0, 196610, 1572908, 0, 196610, 1572909, 0, 196610, 1572910, 0, 196610, 1572911, 0, 196610, 1572912, 0, 196610, 1572913, 0, 196610, 1572914, 0, 196610, 1572915, 0, 196610, 1572916, 0, 196610, 1572917, 0, 196610, 1572918, 0, 196610, 1572919, 0, 196610, 1572920, 0, 196610, 1572921, 0, 196610, 1572922, 0, 196610, 1572923, 0, 196610, 1572924, 0, 196610, 1572925, 0, 196610, 1572926, 0, 196610, 1572927, 0, 196610, 1572928, 0, 196610, 1572929, 0, 196610, 1572930, 0, 196610, 1572931, 0, 196610, 1572932, 0, 196615, 1572933, 0, 196610, 1572934, 0, 196610, 1572935, 0, 196610, 1572936, 0, 196611, 1572938, 0, 65536, 1638468, 0, 196608, 1638474, 0, 196608, 1704002, 0, 1, 1704003, 0, 3, 1704011, 0, 65536, 1769537, 0, 0, 1769547, 0, 65540, 1769548, 0, 5, 1835072, 0, 0, 1835084, 0, 131072, 1900606, 0, 1, 1900607, 0, 3, 1900620, 0, 131072, 1966141, 0, 0, 1966156, 0, 131072, 2031676, 0, 0, 2031692, 0, 196608, 2097210, 0, 1, 2097211, 0, 3, 2097227, 0, 65536, 2162744, 0, 1, 2162745, 0, 3, 2162763, 0, 131072, 2228279, 0, 0, 2228299, 0, 131072, 2359294, 0, 1, 2359295, 0, 2, 2293760, 0, 2, 2293761, 0, 2, 2293762, 0, 2, 2293763, 0, 2, 2293764, 0, 2, 2293765, 0, 2, 2293766, 0, 2, 2293767, 0, 2, 2293768, 0, 2, 2293769, 0, 2, 2293770, 0, 2, 2293771, 0, 2, 2293772, 0, 2, 2293773, 0, 2, 2293774, 0, 2, 2293775, 0, 2, 2293776, 0, 2, 2293777, 0, 2, 2293778, 0, 2, 2293779, 0, 2, 2293780, 0, 2, 2293781, 0, 2, 2293782, 0, 2, 2293783, 0, 2, 2293784, 0, 2, 2293785, 0, 2, 2293786, 0, 3, 2293814, 0, 65536, 2293835, 0, 131072, 2359323, 0, 1, 2359324, 0, 2, 2359325, 0, 2, 2359326, 0, 2, 2359327, 0, 2, 2359328, 0, 2, 2359329, 0, 2, 2359330, 0, 2, 2359331, 0, 2, 2359332, 0, 2, 2359333, 0, 2, 2359334, 0, 2, 2359335, 0, 2, 2359336, 0, 2, 2359337, 0, 2, 2359338, 0, 2, 2359339, 0, 2, 2359340, 0, 2, 2359341, 0, 2, 2359342, 0, 2, 2359343, 0, 2, 2359344, 0, 2, 2359345, 0, 2, 2359346, 0, 9, 2359347, 0, 131082, 2359348, 0, 2, 2359349, 0, 2, 2359350, 0, 65541, 2359371, 0, 196608, 2424882, 0, 196609, 2424883, 0, 196611, 2424906, 0, 65536, 2490416, 0, 1, 2490417, 0, 3, 2490442, 0, 131072, 2555950, 0, 1, 2555951, 0, 3, 2555978, 0, 131072, 2621485, 0, 0, 2621514, 0, 131072, 2687018, 0, 1, 2687019, 0, 2, 2687020, 0, 3, 2687050, 0, 196608, 2752552, 0, 1, 2752553, 0, 3, 2752585, 0, 65536, 2818086, 0, 1, 2818087, 0, 3, 2818121, 0, 131072, 2883619, 0, 1, 2883620, 0, 2, 2883621, 0, 3, 2883657, 0, 196608, 2949151, 0, 1, 2949152, 0, 2, 2949153, 0, 2, 2949154, 0, 3, 2949192, 0, 65536, 3014684, 0, 1, 3014685, 0, 2, 3014686, 0, 3, 3014728, 0, 196608, 3080215, 0, 1, 3080216, 0, 2, 3080217, 0, 2, 3080218, 0, 2, 3080219, 0, 3, 3080263, 0, 0, 3145738, 0, 1, 3145739, 0, 2, 3145740, 0, 2, 3145741, 0, 2, 3145742, 0, 2, 3145743, 0, 2, 3145744, 0, 2, 3145745, 0, 2, 3145746, 0, 2, 3145747, 0, 2, 3145748, 0, 2, 3145749, 0, 2, 3145750, 0, 3, 3145798, 0, 65536, 3211268, 0, 4, 3211269, 0, 2, 3211270, 0, 2, 3211271, 0, 2, 3211272, 0, 65543, 3211273, 0, 3, 3211334, 0, 196608, 3342333, 0, 1, 3342334, 0, 2, 3342335, 0, 2, 3276800, 0, 2, 3276801, 0, 2, 3276802, 0, 2, 3276803, 0, 2, 3276804, 0, 65541, 3276808, 0, 196608, 3276869, 0, 0, 3342345, 0, 1, 3342346, 0, 3, 3342404, 0, 65536, 3407883, 0, 1, 3407884, 0, 3, 3407940, 0, 196608, 3473421, 0, 0, 3473474, 0, 1, 3473475, 0, 3, 3538958, 0, 1, 3538959, 0, 3, 3539009, 0, 65536, 3604496, 0, 1, 3604497, 0, 2, 3604498, 0, 2, 3604499, 0, 3, 3604545, 0, 196608, 3670036, 0, 1, 3670037, 0, 3, 3670080, 0, 0, 3735574, 0, 1, 3735575, 0, 2, 3735576, 0, 2, 3735577, 0, 2, 3735578, 0, 3, 3735615, 0, 0, 3801115, 0, 1, 3801116, 0, 2, 3801117, 0, 2, 3801118, 0, 2, 3801119, 0, 2, 3801120, 0, 3, 3801147, 0, 1, 3801148, 0, 2, 3801149, 0, 2, 3801150, 0, 3, 3866657, 0, 1, 3866658, 0, 2, 3866659, 0, 2, 3866660, 0, 2, 3866661, 0, 2, 3866662, 0, 2, 3866663, 0, 2, 3866664, 0, 2, 3866665, 0, 2, 3866666, 0, 2, 3866667, 0, 2, 3866668, 0, 2, 3866669, 0, 2, 3866670, 0, 2, 3866671, 0, 2, 3866672, 0, 2, 3866673, 0, 2, 3866674, 0, 2, 3866675, 0, 2, 3866676, 0, 2, 3866677, 0, 2, 3866678, 0, 2, 3866679, 0, 2, 3866680, 0, 2, 3866681, 0, 2, 3866682, 0, 3 )

[node name="ChangeScene" parent="." instance=ExtResource( 2 )]
position = Vector2( 639.047, 148.976 )
path = "res://Scenes/Levels/World2.tscn"

[node name="Players" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="QuickPlayer" parent="Players" instance=ExtResource( 6 )]
position = Vector2( 455.709, 227.351 )

[node name="TechPlayer" parent="Players" instance=ExtResource( 5 )]
position = Vector2( 684.278, 639.819 )

[node name="StrongPlayer" parent="Players" instance=ExtResource( 1 )]
position = Vector2( 196.083, 238.679 )
collision_mask = 64

[node name="TechPlayer2" parent="Players" instance=ExtResource( 5 )]
position = Vector2( 968.115, 204.241 )

[node name="QuickPlayer2" parent="Players" instance=ExtResource( 6 )]
position = Vector2( 1065.96, 244.518 )

[node name="StrongPlayer2" parent="Players" instance=ExtResource( 1 )]
position = Vector2( 206.432, 513.487 )
collision_mask = 64

[node name="TechPlayer3" parent="Players" instance=ExtResource( 5 )]
position = Vector2( 762.317, 209.848 )

[node name="QuickPlayer3" parent="Players" instance=ExtResource( 6 )]
position = Vector2( 710.241, 639.948 )

[node name="StrongPlayer3" parent="Players" instance=ExtResource( 1 )]
position = Vector2( 383.096, 499.885 )
collision_mask = 64

[node name="CamSwitch" parent="." instance=ExtResource( 3 )]

[node name="Level_Camera" parent="CamSwitch" index="2"]
limit_left = 0
limit_right = 10000
limit_bottom = 10000

[node name="Node" type="Node" parent="."]

[node name="Spikes" parent="Node" instance=ExtResource( 9 )]
position = Vector2( 228.325, 759.033 )

[node name="Spikes2" parent="Node" instance=ExtResource( 9 )]
position = Vector2( 564.198, 567.946 )

[node name="Spikes3" parent="Node" instance=ExtResource( 9 )]
position = Vector2( 648.827, 263.929 )
[connection signal="killed" from="Players/QuickPlayer" to="Players" method="_on_QuickPlayer_killed"]
[connection signal="killed" from="Players/TechPlayer" to="Players" method="_on_TechPlayer_killed"]
[connection signal="killed" from="Players/StrongPlayer" to="Players" method="_on_StrongPlayer_killed"]
[connection signal="killed" from="Players/TechPlayer2" to="Players" method="_on_TechPlayer_killed"]
[connection signal="killed" from="Players/QuickPlayer2" to="Players" method="_on_QuickPlayer_killed"]
[connection signal="killed" from="Players/StrongPlayer2" to="Players" method="_on_StrongPlayer_killed"]
[connection signal="killed" from="Players/TechPlayer3" to="Players" method="_on_TechPlayer_killed"]
[connection signal="killed" from="Players/QuickPlayer3" to="Players" method="_on_QuickPlayer_killed"]
[connection signal="killed" from="Players/StrongPlayer3" to="Players" method="_on_StrongPlayer_killed"]
[connection signal="timeout" from="CamSwitch/SwitchCamTimer" to="Players" method="_on_SwitchCamTimer_timeout"]

[editable path="CamSwitch"]
